Outliner: Drawing doesn't refresh after adding a new collection #53442

Closed
opened 2017-12-01 20:11:38 +01:00 by Dalai Felinto · 15 comments

Short description of error
Sometimes outliner doesn't refresh after adding a new collection.

Exact steps for others to reproduce the error

Follow them carefully since there are different ways to trigger the outliner draw refresh and we don't want to stummle upon them.

  • Without clicking on anything, use the mouse wheel to reveal the buttons in the outliner header.
  • Click on the icon to "Add a new collection"

The original collection (Default Collection) is no longer highlighted (since it's no longer active), however we don't see the new collection until we force the outliner draw to refresh.

**Short description of error** Sometimes outliner doesn't refresh after adding a new collection. **Exact steps for others to reproduce the error** *Follow them carefully since there are different ways to trigger the outliner draw refresh and we don't want to stummle upon them.* * Without clicking on anything, use the mouse wheel to reveal the buttons in the outliner header. * Click on the icon to "Add a new collection" The original collection (Default Collection) is no longer highlighted (since it's no longer active), however we don't see the new collection until we force the outliner draw to refresh.
Author
Owner

Changed status to: 'Open'

Changed status to: 'Open'
Author
Owner

Added subscriber: @dfelinto

Added subscriber: @dfelinto

Added subscriber: @spockTheGray-4

Added subscriber: @spockTheGray-4
Danrae Pray self-assigned this 2017-12-06 06:18:20 +01:00

Noticed there is also a new outliner refresh issue when you just switch the active ViewLayer to another. I spent a bit of time digging into the outliner tree rebuild / drawing code, so I think I'd like to take a peek at this if it's not on the critical path :)

Noticed there is also a new outliner refresh issue when you just switch the active ViewLayer to another. I spent a bit of time digging into the outliner tree rebuild / drawing code, so I think I'd like to take a peek at this if it's not on the critical path :)

Added subscriber: @sameena

Added subscriber: @sameena

This comment was removed by @sameena

*This comment was removed by @sameena*

Added subscriber: @mont29

Added subscriber: @mont29
Danrae Pray removed their assignment 2017-12-11 15:19:38 +01:00
Campbell Barton was assigned by Danrae Pray 2017-12-11 15:19:38 +01:00
Campbell Barton was unassigned by Danrae Pray 2017-12-11 15:43:12 +01:00
Danrae Pray self-assigned this 2017-12-11 15:43:12 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Added subscriber: @JulianEisel

Added subscriber: @JulianEisel

In #53442#473811, @spockTheGray-4 wrote:
Noticed there is also a new outliner refresh issue when you just switch the active ViewLayer to another. I spent a bit of time digging into the outliner tree rebuild / drawing code, so I think I'd like to take a peek at this if it's not on the critical path :)

This is fixed by @JulianEisel 's commit: https://developer.blender.org/rB9515737b5542ea78b452a4623fe95fd9e1e2c53b

> In #53442#473811, @spockTheGray-4 wrote: > Noticed there is also a new outliner refresh issue when you just switch the active ViewLayer to another. I spent a bit of time digging into the outliner tree rebuild / drawing code, so I think I'd like to take a peek at this if it's not on the critical path :) This is fixed by @JulianEisel 's commit: https://developer.blender.org/rB9515737b5542ea78b452a4623fe95fd9e1e2c53b
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author
Owner

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'
Author
Owner

This is actually still broken. I misread that @spockTheGray-4 was referring to a different issue.

This is actually still broken. I misread that @spockTheGray-4 was referring to a different issue.

This issue was referenced by b3bcbc9e85

This issue was referenced by b3bcbc9e85aaad3c6262e8203c69d4089d5d8154
Author
Owner

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53442
No description provided.